<resources>
    <string name="app_name">Kind.ly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TvCharities">Charities</string>
    <string name="TvCharity_name">Charity Name</string>
    <string name="TvCharity_description">Charity Description.</string>
    <string name="SendCharityReqTv">Send Charity Request</string>
    <string name="NameReqTv">Name/Organization</string>
    <string name="EmailTv">Email</string>
    <string name="DescriptionTv">Description</string>
    <string name="BankDetailsTv">Bank Details</string>
    <string name="SendBtn">Send</string>
    <string name="AddPostTv">Add Post</string>
    <string name="AddImageTv">Add Image</string>
    <string name="AddPostBtn">Add Post</string>
    <string name="Tvadd_a_new_charity">Add a New Charity</string>
    <string name="Tvname">Name</string>
    <string name="Tvcontact_number">Contact Number</string>
    <string name="TVemail">Email</string>
    <string name="Tvdescription">Description</string>
    <string name="Tvupload_image">Upload Image</string>
    <string name="Btnadd_charity">Add Charity</string>
    <string name="BtnCancel">Cancel</string>
    <string name="Tvupdate_charity">Update Charity</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="PostsTv">Posts</string>
    <string name="NameCharTv">Name of the Charity</string>
    <string name="TvAvailable_charities">Available charities</string>

    <string name="Tvcharity_name">Charity Name</string>
    <string name="btnmake_a_donation">Make a donation</string>
    <string name="Tvuser_name">User Name</string>
    <string name="TvAmount">0.00</string>

    <string name="UpdatePostBtn">Update Post</string>
    <string name="DeletePostBtn">Delete</string>
    <string name="UpdatePostTv">Update Post</string>
    <string name="FeedTv">Feed</string>
    <string name="hintCredict_card_number">Credict Card Number</string>
    <string name="hintCvv">CVV</string>
    <string name="Tvadd_payment_method">Add Payment Method</string>
    <string name="Tvcard_no">card no</string>
    <string name="Tvcvv">CVV</string>
    <string name="Btnmy_payment_methods">My Payment Methods</string>

    <string name="Tvmobile_no">Mobile No</string>
    <string name="TVamontStr">Amont</string>
    <string name="BtnDonate">Donate</string>

    <string name="GlobalChattv">Globle Chat</string>
    <string name="profileNameTv">Name</string>
    <string name="profileEmailTv">Email</string>
    <string name="profileMobileTv">Mobile Number</string>
    <string name="btnTextEditProfile">Edit Profile</string>
    <string name="btnTextResetPassword">Reset Password</string>
    <string name="btnDonationHistory">My Donation History</string>
    <string name="btnTextLogout">Logout</string>

    <string name="Tvchoose_a_payment_method">Choose a payment method</string>

    <string name="feedImg">Feed Img</string>
    <string name="logoImg">Logo Img</string>
    <string name="tvRequestFootNote">Our team will respond to you as soon as possible.</string>
    <string name="hintCreditCardNo">Credit Card Number</string>
    <string name="TopicPostTv">Post Topic</string>
    <string name="PickImageBtn">"Pick an Image "</string>
    <string name="tvRecentDonations">Recent Donations</string>
    <string name="AddedPostsTv">Added Posts</string>

    <string name="Tvdonation_history">Donation History</string>
    <string name="tvDate">03/02/22</string>
    <string name="Tvamount">00.00</string>

    <string name="tvAvailableCharities">Available Charities</string>

    <string name="Tvexp">MM/YY</string>

    <string name="tvColDate">Date</string>
    <string name="tvColCharity">Charity</string>
    <string name="tvColAmount">Amount</string>
    <string name="tvWelcomAdmin">Welcome Admin</string>
    <string name="tvLabelCardNo">Card Number</string>
    <string name="tvLabelExp">Expire Date</string>
    <string name="tvChat">Global Chat</string>
    <string name="tvChatWarning">Don\'t share any personal information here.</string>
    <string name="Tvthank_you">Thank You</string>
    <string name="Tvfor_your_kind_donation">For your kind donation</string>
    <string name="return_to_home">Return to home</string>
    <string name="Tvkind_ly">Kind.ly</string>
    <string name="Tvview_donation_history">View donation history</string>


</resources>