<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPost">

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="565dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="21dp"
        android:layout_marginTop="81dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <ImageView
                android:id="@+id/AddPostImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/imgapplogo"></ImageView>

            <TextView
                android:id="@+id/tvAddPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/AddPostTv"
                android:textAlignment="viewEnd"
                android:textColor="@color/dark_blue"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvCharityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/NameCharTv"
            android:textColor="@color/light_blue"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/edtText_post_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/user_edittext"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:textColor="@color/light_blue"
            android:textColorHighlight="@color/black" />


        <TextView
            android:id="@+id/tvCharityDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/DescriptionTv"
            android:textColor="@color/light_blue"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/edtText_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_edittext"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:textColor="@color/light_blue"
            android:textColorHighlight="@color/black"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:scrollbars="vertical"
            />


        <TextView
            android:id="@+id/tvAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/AddImageTv"
            android:textColor="@color/light_blue"
            android:textStyle="bold"></TextView>

        <ImageView
            android:id="@+id/ivAdminPostImg"
            android:layout_width="70dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/baseline_image_24" />


        <Button
            android:id="@+id/btnAddPost"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/AddPostBtn"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/btnCancelPost"
            android:layout_width="@dimen/btnWidth"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/BtnCancel"
            android:textSize="14sp"></Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>